# dia_live_captions

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  dylib.py  m0_live_captions.py  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.ps1
.claude/: HANDOFF.md  settings.json
.claude/handoff-archive/: HANDOFF-20260719-100024.md
.claude/hooks/: archive-handoff.sh  load-handoff.sh
.github/workflows/: build-installer.yml
docs/: architecture.md  diarization-research.md
packaging/: build.ps1  cli_launch.py  livecaptions.iss  livecaptions.spec  make_patch.py  overlay_launch.py
packaging/hooks/: README.md
packaging/licenses/: NOTICE.txt
src/livecaptions/: __init__.py  __main__.py  app.py  config.py  events.py  runtime.py  updater.py  util.py
src/livecaptions/asr/: __init__.py  hypothesis.py  segmenter.py  sounds.py  streaming.py  vad.py  whisper.py
src/livecaptions/capture/: __init__.py  base.py  cuda.py  devices.py  gain.py  mixed.py  probe.py  recorder.py  wasapi.py  wavfile.py
src/livecaptions/diarize/: __init__.py  _nemo_vendor.py  assign.py  base.py  factory.py  models.py  pipeline.py  pyannote_backend.py  sherpa_backend.py  streaming_sortformer.py
src/livecaptions/llm/: credentials.py  discover.py  providers.py
src/livecaptions/notes/: __init__.py  generate.py
src/livecaptions/sources/: __init__.py  base.py  demo.py  fake.py  local.py  streaming_local.py
src/livecaptions/store/: __init__.py  db.py  export.py  naming.py  search.py  writer.py
src/livecaptions/ui/: __init__.py  advanced.py  ai.py  diarization.py  hotkeys.py  overlay.py  settings.py  terminal.py  transcripts.py  tray.py
tests/: test_advanced_tab.py  test_ai_tab.py  test_assign.py  test_auto_gain.py  test_degenerate.py  test_delete_and_notes_ui.py  test_device_picker.py  test_diarization_tab.py  test_discover.py  test_hotkeys.py  test_hypothesis.py  test_llm_providers.py  test_make_patch.py  test_mic_capture.py  test_model_load_errors.py  test_naming.py  test_no_bom.py  test_notes.py  test_recorder.py  test_segmenter.py  test_settings_persist.py  test_sounds.py  test_spec_trim.py  test_startup_mode.py  test_store.py  test_streaming_buffer.py  test_transcripts_tab.py  test_update_ui.py  test_updater.py
tests/manual/: offline_diarization_check.py  restart_smoke.py  transport_smoke.py
